--- a/index.html
+++ b/index.html
@@ -26,5 +26,105 @@
         <a href="#" class="btn btn--white btn--animated">Discover our Tours</a>
       </div>
     </header>
+
+    <section class="section-about">
+      <div class="u-center-text u-margin-botton-big">
+        <h2 class="heading-secondary">
+          Exciting tours for adventerous people
+        </h2>
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature'</h3>
+          <p class="paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, asperiores explicabo facere quam illum
+            debitis dolor corporis labore totam esse dolores recusandae animi beatae culpa consequatur autem excepturi
+            reiciendis ab.
+          </p>
+          <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+          <p class="paragraph">
+            Tenetur illum sint expedita. Ab quos distinctio magni culpa laudantium nemo incidunt, alias excepturi
+            eveniet, commodi, provident soluta nihil enim thela.
+          </p>
+
+          <a href="#" class="btn-text">Learn more &rarr;</a>
+        </div>
+        <div class="col-1-of-2">
+          <div class="composition">
+            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1" />
+          </div>
+          <div class="composition">
+            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2" />
+          </div>
+          <div class="composition">
+            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <section class="grid-test">
+      <div class="row">
+        <div class="col-1-of-2">
+          Col 1 of 2
+        </div>
+        <div class="col-1-of-2">
+          Col 1 of 2
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-3">
+          Col 1 of 3
+        </div>
+        <div class="col-1-of-3">
+          Col 1 of 3
+        </div>
+        <div class="col-1-of-3">
+          Col 1 of 3
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-3">
+          Col 1 of 3
+        </div>
+        <div class="col-2-of-3">
+          Col 2 of 3
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-4">
+          Col 1 of 4
+        </div>
+        <div class="col-1-of-4">
+          Col 1 of 4
+        </div>
+        <div class="col-1-of-4">
+          Col 1 of 4
+        </div>
+        <div class="col-1-of-4">
+          Col 1 of 4
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-4">
+          Col 1 of 4
+        </div>
+        <div class="col-1-of-4">
+          Col 1 of 4
+        </div>
+        <div class="col-2-of-4">
+          Col 2 of 4
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-4">
+          Col 1 of 4
+        </div>
+        <div class="col-3-of-4">
+          Col 3 of 4
+        </div>
+      </div>
+    </section> -->
   </body>
 </html>
