--- a/index.html
+++ b/index.html
@@ -300,6 +300,32 @@
       </section>
     </main>
 
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item"><a href="#" class="footer__link">company</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">contact us</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">careers</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">privacy policy</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">terms</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <div class="footer__copyright">
+            Built by <a href="#" class="footer__link">Benjamin Yankey</a> for a client of a major company. Copyright @
+            Benkeyben.com
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">
