Add a section of popup menu to file

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <span class="heading-primary--main">Outdoors</span>
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
-        <a href="#" class="btn btn--white btn--animated">Discover our Tours</a>
+        <a href="#section-tours" class="btn btn--white btn--animated">Discover our Tours</a>
       </div>
     </header>
 
@@ -126,7 +126,7 @@
 
       <section class="section-tours">
         <div class="u-center-text u-margin-botton-big">
-          <h2 class="heading-secondary">
+          <h2 class="heading-secondary" id="section-tours">
             Most Popular tours
           </h2>
         </div>
@@ -156,7 +156,7 @@
                     <p class="card__price-only">only</p>
                     <p class="card__price-value">$297</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -186,7 +186,7 @@
                     <p class="card__price-only">only</p>
                     <p class="card__price-value">$497</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -216,7 +216,7 @@
                     <p class="card__price-only">only</p>
                     <p class="card__price-value">$897</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -224,7 +224,7 @@
         </div>
 
         <div class="u-center-text u-margin-top-huge">
-          <a href="#" class="btn btn--green">Discover all tours</a>
+          <a href="#section-tours" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
 
@@ -352,6 +352,31 @@
         </div>
       </div>
     </footer>
+
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <div class="popup__close">
+            <a href="#section-tours" class="popup__close--link">&times;</a>
+          </div>
+          <h2 class="heading-secondary u-margin-bottom-small">Start Booking now</h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important! &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor totam maxime culpa neque nihil ullam vel,
+            vero quidem dolorem saepe suscipit quod odit! Obcaecati unde assumenda, laboriosam totam atque dolorum.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur ut repellat dolores fugiat, eveniet
+            totam, voluptas aut optio quis nisi illum perferendis fuga
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
 
     <!-- <section class="grid-test">
       <div class="row">
