modified footer copyright section, deleted css/concat

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
 
-    <!-- <link rel="stylesheet" href="css/icon-font.css" /> -->
+    <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
@@ -23,26 +23,26 @@
       <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>01</span>About natour</a>
+            <a href="#about" class="navigation__link"><span>01</span>About natour</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>02</span>Popular tours</a>
+            <a href="#tours" class="navigation__link"><span>02</span>Popular tours</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>03</span>Your benefits</a>
+            <a href="#benefits" class="navigation__link"><span>03</span>Your benefits</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>04</span>Stories</a>
+            <a href="#stories" class="navigation__link"><span>04</span>Stories</a>
           </li>
           <li class="navigation__item">
-            <a href="#" class="navigation__link"><span>05</span>Book now</a>
+            <a href="#book" class="navigation__link"><span>05</span>Book now</a>
           </li>
         </ul>
       </nav>
     </div>
     <header class="header">
       <div class="header__logo-box">
-        <img srcset="img/logo-white.png " alt="Logo" class="header__logo" />
+        <img srcset="img/logo-white.png" alt="Logo" class="header__logo" />
       </div>
 
       <div class="header__text-box">
@@ -55,7 +55,7 @@
     </header>
 
     <main>
-      <section class="section-about">
+      <section class="section-about" id="about">
         <div class="u-center-text u-margin-botton-big">
           <h2 class="heading-secondary">
             Exciting tours for adventerous people
@@ -138,7 +138,7 @@
         </div>
       </section>
 
-      <section class="section-tours">
+      <section class="section-tours" id="tours">
         <div class="u-center-text u-margin-botton-big">
           <h2 class="heading-secondary" id="section-tours">
             Most Popular tours
@@ -242,7 +242,7 @@
         </div>
       </section>
 
-      <section class="section-stories">
+      <section class="section-stories" id="stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
             <source src="img/video.mp4" type="video/mp4" />
@@ -296,7 +296,7 @@
         </div>
       </section>
 
-      <section class="section-book">
+      <section class="section-book" id="book">
         <div class="row">
           <div class="book">
             <div class="book__form">
@@ -367,8 +367,7 @@
         </div>
         <div class="col-1-of-2">
           <div class="footer__copyright">
-            Built by <a href="#" class="footer__link">Benjamin Yankey</a> for a client of a major company. Copyright @
-            Benkeyben.com
+            Code along with Jonas Schemedman online bootcamp course
           </div>
         </div>
       </div>
@@ -399,68 +398,6 @@
       </div>
     </div>
 
-    <!-- <section class="grid-test">
-      <div class="row">
-        <div class="col-1-of-2">
-          Col 1 of 2
-        </div>
-        <div class="col-1-of-2">
-          Col 1 of 2
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-1-of-3">
-          Col 1 of 3
-        </div>
-        <div class="col-1-of-3">
-          Col 1 of 3
-        </div>
-        <div class="col-1-of-3">
-          Col 1 of 3
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-3">
-          Col 1 of 3
-        </div>
-        <div class="col-2-of-3">
-          Col 2 of 3
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-2-of-4">
-          Col 2 of 4
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-1-of-4">
-          Col 1 of 4
-        </div>
-        <div class="col-3-of-4">
-          Col 3 of 4
-        </div>
-      </div>
-    </section> -->
+    <script src="js/script.js"></script>
   </body>
 </html>
